@@ -782,6 +782,8 @@ static S_I little_main(shell_interaction & dialog, S_I argc, char * const argv[]
 		    listing_options.set_subtree(*param.subtree);
 		    listing_options.set_filter_unsaved(param.filter_unsaved);
 		    listing_options.set_display_ea(param.list_ea);
+		    if(param.file_size != 0 && param.list_mode == archive_options_listing::slicing)
+			listing_options.set_user_slicing(param.first_file_size, param.file_size);
 		    arch->op_listing(dialog, listing_options);
 		}
                 break;
