@@ -50,14 +50,6 @@ namespace libdar
 	ref_layout = NULL;
     }
 
-    header_version::~header_version()
-    {
-	if(crypted_key != NULL)
-	    delete crypted_key;
-	if(ref_layout != NULL)
-	    delete ref_layout;
-    }
-
     void header_version::read(generic_file &f)
     {
 	crc *ctrl = NULL;
@@ -91,25 +83,21 @@ namespace libdar
 	else
 	    sym = crypto_none; // no crypto used, coherent with flag
 
+	if(crypted_key != NULL)
+	{
+	    delete crypted_key;
+	    crypted_key = NULL;
+	}
 
 	if((flag & VERSION_FLAG_HAS_CRYPTED_KEY) != 0)
 	{
 	    infinint key_size = f;
 
-	    if(crypted_key == NULL)
-		crypted_key = new (get_pool()) memory_file();
+	    crypted_key = new (get_pool()) memory_file();
 	    if(crypted_key == NULL)
 		throw Ememory("header_version::read");
 	    if(f.copy_to(*crypted_key, key_size) != key_size)
 		throw Erange("header_version::read", gettext("Missing data for encrypted symmetrical key"));
-	}
-	else
-	{
-	    if(crypted_key != NULL)
-	    {
-		delete crypted_key;
-		crypted_key = NULL;
-	    }
 	}
 
 	if((flag & VERSION_FLAG_HAS_REF_SLICING) != 0)
@@ -245,6 +233,46 @@ namespace libdar
 	}
 	if(ctrl != NULL)
 	    delete ctrl;
+    }
+
+    void header_version::detruit()
+    {
+	if(crypted_key != NULL)
+	{
+	    delete crypted_key;
+	    crypted_key = NULL;
+	}
+	if(ref_layout != NULL)
+	{
+	    delete ref_layout;
+	    ref_layout = NULL;
+	}
+    }
+
+    void header_version::copy_from(const header_version & ref)
+    {
+	edition = ref.edition;
+	algo_zip = ref.algo_zip;
+	cmd_line = ref.cmd_line;
+	flag = ref.flag;
+	initial_offset = ref.initial_offset;
+	sym = ref.sym;
+	if(ref.crypted_key != NULL)
+	{
+	    crypted_key = new (get_pool()) memory_file(*ref.crypted_key);
+	    if(crypted_key == NULL)
+		throw Ememory("header_version::copy_from");
+	}
+	else
+	    crypted_key = NULL;
+	if(ref.ref_layout != NULL)
+	{
+	    ref_layout = new (get_pool()) slice_layout(*ref.ref_layout);
+	    if(ref_layout == NULL)
+		throw Ememory("header_version::copy_from");
+	}
+	else
+	    ref_layout = NULL;
     }
 
     static char sym_crypto_to_char(crypto_algo a)
